[project]
name = "ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Noman Baig",email = "numansafi97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.0.0)",
    "python-jose[cryptography]",
    "pydantic-settings (>=2.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
